tests/cases/compiler/truthinessCallExpressionCoercion4.ts
// @strictNullChecks: true

const or = x => y => x || y;

if (or(true)) { // error
  
}
